fix: window widget title vertical alignment

--- a/modules/window/style.less
+++ b/modules/window/style.less
@@ -41,6 +41,7 @@
             width: calc(100% - 50px);
             margin: 0;
             height: 34px;
+            line-height:24px;
         }
         >.buttons {
             color: @color_1;
